--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
   <div class="container">
 
     <section class="header">
-      <h3 class="title">Hi, I am a student at NTUA Architecture and this is my website for Information Technology
-        class.
+      <h3 class="title"> Where architecture meets code — a portfolio of ideas shaped in structure and logic.
       </h3>
     </section>
 
@@ -69,20 +68,21 @@
 
     <div class="row">
       <div class="two-thirds column" style="margin-top: 10%">
-        <h4>I can write anything I want here.</h4>
-        <p>In the hushed depths of midnight's embrace,
-          Where keystrokes dance with ethereal grace,
-          I find solace in the language of machines,
-          In pixels woven with elusive dreams.
-          Coding, my muse, in its binary song,
-          A symphony of logic, where passions belong.</p>
+        <h4> Architectural Projects </h4>
+        <p>
+          Bringing Concepts to Life Through Design
+          From hand-drawn concepts to 3D models and real-world environments, 
+          explore my journey through space, light, and structure. 
+          These works showcase both academic exploration and personal 
+          design philosophies rooted in creativity, functionality, and storytelling.
+        </p>
       </div>
       <div class="one-third column" style="margin-top: 10%">
-        <h4>I am a hacker!</h4>
-        <p>In the tapestry of bytes, I weave my tale,
-          With syntax as my brush, and logic, my sail.
-          In the realm of algorithms, I find my art,
-          A love affair with code, where worlds <a href="http://www.getskeleton.com">depart</a>.</p>
+        <h4>Coding Projects</h4>
+        <p>Crafting Digital Experiences with Purpose
+          A collection of my work in software development — from interactive games 
+          to AI-driven tools and elegant web apps. Each project reflects a love for clean code, 
+          smart systems, and solving problems through technology. <a href="http://www.getskeleton.com">depart</a>.</p>
       </div>
     </div>
 
