--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>Crafting Digital Experiences with Purpose
           A collection of my work in software development — from interactive games 
           to AI-driven tools and elegant web apps. Each project reflects a love for clean code, 
-          smart systems, and solving problems through technology. <a href="http://www.getskeleton.com">depart</a>.</p>
+          smart systems, and solving problems through technology. <a https://nikospetrouch.github.io/FindBombs-website/>depart</a>.</p>
       </div>
     </div>
 
