--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="row example">
         <a class="example-screenshot-wrapper" target="_self" href="assignments/week1.html">
-          <img class="example-screenshot" src="images/coding_cat.jpg">
+          <img class="example-screenshot" src="images/1.jpg">
         </a>
         <div class="one-half offset-by-one-half column">
           <h6 class="example-header">Week 1</h6>
@@ -108,7 +108,7 @@
 
       <div class="row example">
         <a class="example-screenshot-wrapper" target="_self" href="assignments/week1.html">
-          <img class="example-screenshot" src="images/coding_cat_2.jpg">
+          <img class="example-screenshot" src="images/2.jpg">
         </a>
         <div class="one-half offset-by-one-half column">
           <h6 class="example-header">Week 2</h6>
