--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/ico" href="images/favicon.ico">
+  <link rel="icon" type="image/ico" href="images/4.ico">
 
 </head>
 
