--- a/assignments/week1.html
+++ b/assignments/week1.html
@@ -69,7 +69,7 @@
         <p>In the inaugural week of my journey, I have traversed the digital expanse, planting seeds of
           comprehension amidst the fertile soil of knowledge. Each byte deciphered, each concept embraced,
           marks a milestone in my ascent toward technological enlightenment.</p>
-        <img class="example-screenshot" src="../images/3.png">
+        <img class="example-screenshot" src="../images/3.jpg">
         <p class="example-description">I tread upon the digital shores with a blend of trepidation and
           excitement. As I delved into the foundational principles of programming, each keystroke became a
           step forward in my quest for proficiency. Through the haze of syntax and logic, I discovered the
